2005-02-11  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-delete-group): small bug leaves
	an ID in the registry even if it has no groups

2005-02-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-jka-compr-maybe-uncompress): Remove;
	merge it into mm-decompress-buffer.
	(gnus-mime-copy-part): Use the MIME part charset, the value which
	a user specified or gnus-newsgroup-charset for decoding, like
	gnus-mime-inline-part does; set buffer-file-coding-system to tell
	save-buffer what was used.  Suggested by Kevin Ryde
	<user42@zip.com.au>.
	(gnus-mime-inline-part): Allow the name parameter as well as the
	filename parameter; force decompressing of compressed data; always
	display contents being not decoded as unibyte.

	* mm-view.el (mm-display-inline-fontify): Allow the name parameter
	as well as the filename parameter.

	* mm-util.el (mm-decompress-buffer): Merge
	gnus-mime-jka-compr-maybe-uncompress.
	(mm-find-buffer-file-coding-system): Doc fix; force decompressing
	of compressed data.

2005-02-08  Simon Josefsson  <jas@extundo.com>

	* imap.el (imap-log): Doc fix.

2005-02-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-inline-part): Decode parts according to
	the coding cookies; decompress compressed parts.

	* mml.el (mml-generate-mime-1): Add the charaset parameter according
	to the value which a user specified manually or the coding cookie.

	* mm-util.el (mm-string-to-multibyte): New function.
	(mm-detect-mime-charset-region): Work with Emacs 22 as well.
	(mm-coding-system-to-mime-charset): New function.
	(mm-decompress-buffer): New function.
	(mm-find-buffer-file-coding-system): New function.

	* mm-view.el (mm-insert-inline): Make sure a part ends with a newline.
	(mm-display-inline-fontify): Rewrite for decoding and decompressing
	parts.

2004-10-15  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mm-view.el (mm-display-inline-fontify): Decode a part according
	to the charset parameter.
